# rust-benches

./: Cargo.toml  LICENSE  README.md  bench.yaml  clippy.toml  rustfmt.toml
.github/workflows/: rust.yml
benchmark/: Cargo.toml
benchmark/benches/: number_benchmark.rs  serde_benchmark.rs
