[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
serde = { version = "1.0", features = ["derive","alloc"] }
serde_json = { version = "1.0" }

[dev-dependencies]
criterion = { version = "0.3" }

[[bench]]
name = "number_benchmark"
harness = false

[[bench]]
name = "serde_benchmark"
harness = false
